test/fail/int_pack_variant00.v3
//@execute 0=3; 1=1
// BUG: iN.pack/unpack of a variant with cases is accepted but broken.
// PackingUtils.packingWidth() uses only cases[0]'s params and ignores the tag,
// so T gets width 4 and every value packs to 0. unpack crashes the compiler
// with a BoundsCheckException in Eval.v3 evalOp().
// Either reserve bits for the tag, or reject variants with cases in
// checkIntPackTypeArg/checkIntUnpackTypeArg.
type T { case A(x: u4); case B(y: u4); }
def main(a: int) -> int {
	def p = u8.pack<T>(T.B(3));
	def u = u8.unpack<T>(p);
	match (a) {
		0 => match (u) { A(x) => return -1; B(y) => return int.view(y); }
		1 => return if(u == T.B(3), 1, 0);
		_ => return -99;
	}
}
